--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
         body { border-top: 16px solid #ffa100; }
       }
     </style>
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" /> -->
+
   </head>
   <body>
     <div id="message">
@@ -60,6 +62,14 @@
           document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
         }
       });
+    </script>
+    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
+    <script type="text/javascript"> docsearch({
+    apiKey: '8f1278af6e2c6fc548b49f4eaf34b7af',
+    indexName: 'velocityx',
+    inputSelector: '### REPLACE ME ####',
+    debug: false // Set debug to true if you want to inspect the dropdown
+    }); -->
     </script>
   </body>
 </html>
